--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,23 +1,41 @@
-// Main styles
-.search__city {
-	display: flex;
-	align-items: center;
-	background-color: #24343D;
-	border-radius: 12px;
-	padding: 0 30px;
-	justify-content: space-between;
+@import 'variables';
+
+.main__container {
+	position: fixed;
+	bottom: 0;
+	max-height: 350px;
+	width: 100%;
+	height: 100%;
+	background-color: $bg_color;
+	opacity: .9;
 	@media screen and (min-width: 767px) and (max-width: 1023px) {
-		padding: 20px 50px;
-		margin-bottom: 10px;
+		max-height: 500px;
+		overflow: scroll;
 	}
 	@media screen and (max-width: 767px) {
-		padding: 10px 40px;
+		max-height: 500px;
+		overflow: scroll;
 	}
+}
+
+.input__container {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-bottom: 2px solid $color;
+}
+
+.search__weather {
+	display: flex;
+	align-items: center;
+	padding: 20px 50px;
+	@include gapAdap(15px, 10px, 5px);
 	button {
 		background: transparent;
 		border: none;
 	}
 	input {
+		background: transparent;
 		font-size:20px;
 		font-weight: 275;
 		color: $color;
@@ -46,128 +64,99 @@
 	 &:focus:-moz-placeholder           {opacity: 0; transition: opacity 0.3s ease;}
 	 &:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.3s ease;}
 	}
-} 
-
-.container__filters {
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 50px;
-	@media screen and (min-width: 767px) and (max-width: 1023px) {
-		display: block;
-		margin-bottom: 30px;
-	}
-	@media screen and (max-width: 767px) {
-		display: block;
-		margin-bottom: 20px;
-	}
-	
 }
 
-.filters {
-	display: flex;
-	align-items: center;
-	padding: 10px 30px;
-	justify-content: space-between;
-	background-color: #24343D;
-	border-radius: 12px;
-	@media screen and (min-width: 767px) and (max-width: 1023px) {
-		padding: 15px 40px;
-	}
-	@media screen and (max-width: 767px) {
-		display: none;
-	}
-	h2 {
-		font-size: 23px;
-		font-weight: 500;
-	}
-}
-.filters__items {
-	display: flex;
-	gap: 53px;
-	align-items: center;
-	li {
-		border: 1px solid #ffffff4c;
-		border-radius: 15px;
-		padding: 10px 15px;
-	}
-}
-
-// Cards Weather Styles
-.card_weather__items {
-	display: flex;
-	justify-content: space-between;
-}
-
-.card_weather__item.only {
-	max-width: max-content;
-	width: 100%;
-	padding: 30px 82px;
-	margin: 0 auto;
-	@media screen and (max-width: 767px) {
-		padding: 10px 12px;
-	}
-	img {
-		align-self: center;
-		@media screen and (min-width: 767px) and (max-width: 1023px) {
-			margin-bottom: 10px;
-		}
-	}
-	.main__icon_weather {
-		@media screen and (max-width: 767px) {
-			width: 250px;
-		}
-	}
-}
-
-.card_weather__item {
-	background-color: #24353E;
-	border-radius: 20px;
-	box-shadow: 10px 9px 70px 0px rgba(36, 53, 62, 0.40);
-	max-width: 251px;
-	max-height: max-content;
-	padding: 40px 52px;
-	.main__icon_weather {
-		filter: drop-shadow(-5px 10px 25px $color);
-	}
-	h2 {
+.search__future_weather{
+	padding: 20px;
+	button {
+		border: 1px solid $color;
+		background: transparent;
 		font-weight: 700;
-		margin-bottom: 20px;
-	}
+		color: $color;
+		padding: 5px;
+		font-size: 20px;
+		border-radius: 15px;
+		&:hover {
+			cursor: pointer;
+		}
+}
 }
 
-.card__weather_container {
+.info__weather_items {
+	padding: 30px 30px;
 	display: flex;
-	align-items: center;
-	gap: 50px;
+	justify-content: center;
 	@media screen and (min-width: 767px) and (max-width: 1023px) {
-		display: block;
+		flex-wrap: wrap;
+		gap: 40px;
 	}
 	@media screen and (max-width: 767px) {
-		display: block;
-	}
-}
+		flex-wrap: wrap;
 
-.container_info {
-	display: flex;
-	@include gapAdap(80px, 50px, 20px);
-	@media screen and (max-width: 767px) {
-		display: block;
+		gap: 20px;
 	}
-	align-items: center;
 }
 
 .info__weather_item {
 	display: flex;
-	gap: 20px;
-	margin-bottom: 20px;
-	.info__w {
-		align-self: center;
+	align-items: center;
+	border-right: 2px solid $color;
+	&:last-child {
+		border-right: none;
+	}
+	padding: 0 50px; 
+	@include gapAdap(20px, 15px, 10px);
+	h2 {
+		font-size: 20px;
+		font-weight: 500;
+		margin-bottom: 20px;
+		@media screen and (max-width: 767px) {
+			font-size: 40px;
+		}
+	}
+	@media screen and (min-width: 767px) and (max-width: 1023px) {
+		border-right: none;
+		border-bottom: 2px solid $color;
+		justify-content: center;
+		padding-bottom: 10px;
+	}
+	@media screen and (max-width: 767px) {
+		border-right: none;
+		border-bottom: 2px solid $color;
+		justify-content: center;
+		padding-bottom: 10px;
 	}
 }
 
-.go_search {
-	margin: 0 auto;
-	margin-top: 100px;
-	text-align: center;
-	max-width: 400px;
+.option__item {
+	transition: all 0.2s ease;
+	margin-bottom: 20px;
+
+	&:hover {
+		cursor: pointer;
+	}
+
+}
+
+.info__weather_options {
+	display: flex; 
+	align-items: center;
+	@include gapAdap(20px, 15px, 10px);
+	p {
+		text-align: center;
+		margin: 0 auto;
+	}
+}
+
+.pressure__container {
+	h3 {
+		font-size: 18px;
+		text-align: center;
+		margin-bottom: 10px;
+	}
+	img {
+		display: block;
+		margin: 0 auto;
+		margin-bottom: 10px;
+	}
 }
