--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -8,11 +8,11 @@ $color_visibility: #fff;
 $bg_color: #1B262C;
 $bg_color_dark: #1B262C;
 
-$font:'Poppins', sans-serif;
+$font:'Montserrat', sans-serif;
 $font_size: 20;
 $font_weight: 400;
 $line_height: 65;
 
 $min_width: 320;
 $max_width: 1440;
-$max_width_container: 1270; 
+$max_width_container: 1370; 
